update: ログイン時の処理を実装

--- a/homete/Resouces/Localizable.xcstrings
+++ b/homete/Resouces/Localizable.xcstrings
@@ -20,6 +20,9 @@
     "LogOut" : {
 
     },
+    "OK" : {
+
+    },
     "サービスを利用するには、Appleアカウントでサインインする必要があります。" : {
       "localizations" : {
         "ja" : {
@@ -40,6 +43,12 @@
         }
       }
     },
+    "不明のエラーが発生しました" : {
+
+    },
+    "操作が完了しませんでした" : {
+
+    },
     "続行すると、利用規約とプライバシーポリシーに同意したことになります。" : {
       "localizations" : {
         "ja" : {
@@ -49,6 +58,12 @@
           }
         }
       }
+    },
+    "認証に失敗しました。再度サインインをお試しください。" : {
+
+    },
+    "通信に失敗しました" : {
+
     }
   },
   "version" : "1.0"
