update: パートナー未登録のホーム画面を実装

--- a/homete/Resouces/Localizable.xcstrings
+++ b/homete/Resouces/Localizable.xcstrings
@@ -1,7 +1,7 @@
 {
   "sourceLanguage" : "en",
   "strings" : {
-    "Debug" : {
+    "homete" : {
 
     },
     "Homete" : {
@@ -39,6 +39,15 @@
           }
         }
       }
+    },
+    "パートナーを登録して、家事を分担しましょう！" : {
+
+    },
+    "パートナーを登録する" : {
+
+    },
+    "まだパートナーが登録されていません" : {
+
     },
     "ようこそ!" : {
       "localizations" : {
