update: 設定画面の仮実装

--- a/homete/Resouces/Localizable.xcstrings
+++ b/homete/Resouces/Localizable.xcstrings
@@ -1,6 +1,9 @@
 {
   "sourceLanguage" : "en",
   "strings" : {
+    "Display Name" : {
+
+    },
     "homete" : {
 
     },
@@ -46,6 +49,9 @@
     "パートナーを登録する" : {
 
     },
+    "プライバシーポリシー" : {
+
+    },
     "まだパートナーが登録されていません" : {
 
     },
@@ -59,7 +65,16 @@
         }
       }
     },
+    "ライセンス" : {
+
+    },
+    "ログアウト" : {
+
+    },
     "不明のエラーが発生しました" : {
+
+    },
+    "家事テンプレート" : {
 
     },
     "操作が完了しませんでした" : {
@@ -74,6 +89,9 @@
           }
         }
       }
+    },
+    "設定" : {
+
     },
     "認証に失敗しました。再度サインインをお試しください。" : {
 
