udpate: 登録画面のスキャン処理を仮実装

--- a/homete/Resouces/Localizable.xcstrings
+++ b/homete/Resouces/Localizable.xcstrings
@@ -14,7 +14,16 @@
         }
       }
     },
+    "Not Started" : {
+
+    },
     "OK" : {
+
+    },
+    "Start Loading" : {
+
+    },
+    "Started" : {
 
     },
     "サービスを利用するには、Appleアカウントでサインインする必要があります。" : {
