update: StateごとにViewを切り分け

--- a/homete/Resouces/Localizable.xcstrings
+++ b/homete/Resouces/Localizable.xcstrings
@@ -23,9 +23,6 @@
     "Start Loading" : {
 
     },
-    "Started" : {
-
-    },
     "サービスを利用するには、Appleアカウントでサインインする必要があります。" : {
       "localizations" : {
         "ja" : {
@@ -74,6 +71,21 @@
 
     },
     "操作が完了しませんでした" : {
+
+    },
+    "検索中" : {
+
+    },
+    "登録に失敗しました" : {
+
+    },
+    "登録中" : {
+
+    },
+    "登録完了" : {
+
+    },
+    "登録開始" : {
 
     },
     "続行すると、利用規約とプライバシーポリシーに同意したことになります。" : {
