update: 同居人登録フローのワンパス通しの実装

--- a/homete/Resouces/Localizable.xcstrings
+++ b/homete/Resouces/Localizable.xcstrings
@@ -67,7 +67,13 @@
     "不明のエラーが発生しました" : {
 
     },
+    "以下メンバーで登録を開始しますか？" : {
+
+    },
     "家事テンプレート" : {
+
+    },
+    "待機中" : {
 
     },
     "操作が完了しませんでした" : {
