update: 検索画面のUI実装

--- a/homete/Resouces/Localizable.xcstrings
+++ b/homete/Resouces/Localizable.xcstrings
@@ -14,9 +14,6 @@
         }
       }
     },
-    "Not Started" : {
-
-    },
     "OK" : {
 
     },
@@ -65,6 +62,12 @@
 
     },
     "以下メンバーで登録を開始しますか？" : {
+
+    },
+    "同居人の登録" : {
+
+    },
+    "同居人同士でこの画面を開いて近づけてください。自動的に登録が始まります。" : {
 
     },
     "家事テンプレート" : {
