update: クラッカーアニメーションの実装

--- a/homete/Resouces/Localizable.xcstrings
+++ b/homete/Resouces/Localizable.xcstrings
@@ -27,6 +27,12 @@
         }
       }
     },
+    "しばらくお待ちください" : {
+
+    },
+    "デバイスの名前を確認してください" : {
+
+    },
     "パートナーを登録して、家事を分担しましょう！" : {
 
     },
@@ -61,7 +67,7 @@
     "不明のエラーが発生しました" : {
 
     },
-    "以下メンバーで登録を開始しますか？" : {
+    "共に家事を頑張るパートナーへ、エールを送り合いませんか？" : {
 
     },
     "同居人の登録" : {
@@ -73,25 +79,19 @@
     "家事テンプレート" : {
 
     },
-    "待機中" : {
-
-    },
     "操作が完了しませんでした" : {
-
-    },
-    "検索中" : {
 
     },
     "登録に失敗しました" : {
 
     },
-    "登録中" : {
+    "登録はもうすぐ完了します！" : {
+
+    },
+    "登録を開始する" : {
 
     },
     "登録完了" : {
-
-    },
-    "登録開始" : {
 
     },
     "続行すると、利用規約とプライバシーポリシーに同意したことになります。" : {
@@ -103,6 +103,9 @@
           }
         }
       }
+    },
+    "表示されているメンバーで登録を開始しますか？" : {
+
     },
     "設定" : {
 
