update: 登録完了画面のUI実装

--- a/homete/Resouces/Localizable.xcstrings
+++ b/homete/Resouces/Localizable.xcstrings
@@ -17,6 +17,9 @@
     "OK" : {
 
     },
+    "これからは、あなたとパートナーの家事を分担し、協力していくことができます。" : {
+
+    },
     "サービスを利用するには、Appleアカウントでサインインする必要があります。" : {
       "localizations" : {
         "ja" : {
@@ -82,6 +85,9 @@
     "操作が完了しませんでした" : {
 
     },
+    "登録が完了しました！" : {
+
+    },
     "登録に失敗しました" : {
 
     },
@@ -114,6 +120,9 @@
 
     },
     "通信に失敗しました" : {
+
+    },
+    "閉じる" : {
 
     }
   },
