update: 検索から登録開始で片方が登録中画面に遷移しない問題の修正

--- a/homete/Resouces/Localizable.xcstrings
+++ b/homete/Resouces/Localizable.xcstrings
@@ -17,6 +17,9 @@
     "OK" : {
 
     },
+    "キャンセル" : {
+
+    },
     "これからは、あなたとパートナーの家事を分担し、協力していくことができます。" : {
 
     },
@@ -104,6 +107,9 @@
         }
       }
     },
+    "表示されているメンバーで登録を開始しますか？" : {
+
+    },
     "設定" : {
 
     },
@@ -114,6 +120,9 @@
 
     },
     "閉じる" : {
+
+    },
+    "開始する" : {
 
     }
   },
