update: 閉じるボタンタップ時にはアラートを表示するよう修正

--- a/homete/Resouces/Localizable.xcstrings
+++ b/homete/Resouces/Localizable.xcstrings
@@ -20,6 +20,9 @@
     "お手数ですが、再度デバイスを近づけて通信を行ってください" : {
 
     },
+    "お手数ですが、通信状況をご確認の上、再度接続からお試しください。" : {
+
+    },
     "キャンセル" : {
 
     },
@@ -97,10 +100,22 @@
     "登録が完了しました！" : {
 
     },
+    "登録に失敗しました" : {
+
+    },
     "登録はもうすぐ完了します！" : {
 
     },
+    "登録を終了すると、また初めから登録し直す必要があります。" : {
+
+    },
     "登録を開始する" : {
+
+    },
+    "登録処理を終了しますか？" : {
+
+    },
+    "終了する" : {
 
     },
     "続行すると、利用規約とプライバシーポリシーに同意したことになります。" : {
