update: テンプレート未設定バナーまで実装

--- a/homete/Resouces/Localizable.xcstrings
+++ b/homete/Resouces/Localizable.xcstrings
@@ -57,6 +57,9 @@
     "まだパートナーが登録されていません" : {
 
     },
+    "もらった感謝の数" : {
+
+    },
     "ようこそ!" : {
       "localizations" : {
         "ja" : {
@@ -77,6 +80,9 @@
 
     },
     "不明のエラーが発生しました" : {
+
+    },
+    "今月の獲得ポイント" : {
 
     },
     "共に家事を頑張るパートナーへ、エールを送り合いませんか？" : {
