update: ビルドエラーの修正

--- a/homete/Resouces/Localizable.xcstrings
+++ b/homete/Resouces/Localizable.xcstrings
@@ -1,7 +1,7 @@
 {
   "sourceLanguage" : "en",
   "strings" : {
-    "homete" : {
+    "" : {
 
     },
     "Homete" : {
@@ -109,6 +109,9 @@
     "同居人同士でこの画面を開いて近づけてください。自動的に登録が始まります。" : {
 
     },
+    "完了" : {
+
+    },
     "家事がありません" : {
 
     },
@@ -124,10 +127,16 @@
     "家事を設定する" : {
 
     },
+    "承認待ち" : {
+
+    },
     "接続エラー" : {
 
     },
     "操作が完了しませんでした" : {
+
+    },
+    "未完了" : {
 
     },
     "登録が完了しました！" : {
