update: タブ画面を追加

--- a/homete/Resouces/Localizable.xcstrings
+++ b/homete/Resouces/Localizable.xcstrings
@@ -4,6 +4,9 @@
     "" : {
 
     },
+    "homete" : {
+
+    },
     "Homete" : {
       "localizations" : {
         "ja" : {
@@ -13,6 +16,9 @@
           }
         }
       }
+    },
+    "list.bullet.clipboard.fill" : {
+
     },
     "OK" : {
 
@@ -43,6 +49,9 @@
 
     },
     "タイムライン" : {
+
+    },
+    "ダッシュボード" : {
 
     },
     "デバイスの名前を確認してください" : {
@@ -110,6 +119,9 @@
 
     },
     "完了" : {
+
+    },
+    "家事" : {
 
     },
     "家事がありません" : {
