update: 家事登録画面の入力UIを実装

--- a/homete/Resouces/Localizable.xcstrings
+++ b/homete/Resouces/Localizable.xcstrings
@@ -136,7 +136,13 @@
     "家事のテンプレートを設定して、家事を分担しましょう！" : {
 
     },
+    "家事の名前を入力" : {
+
+    },
     "家事を設定する" : {
+
+    },
+    "家事を追加" : {
 
     },
     "承認待ち" : {
