update: キーボード領域外をタップでキーボードを閉じる

--- a/homete/Resouces/Localizable.xcstrings
+++ b/homete/Resouces/Localizable.xcstrings
@@ -4,6 +4,9 @@
     "" : {
 
     },
+    "\"%@\"は既に登録されています。" : {
+
+    },
     "homete" : {
 
     },
@@ -164,6 +167,9 @@
 
     },
     "登録する" : {
+
+    },
+    "登録できません" : {
 
     },
     "登録に失敗しました" : {
