update: 家事詳細画面を追加

--- a/homete/Resouces/Localizable.xcstrings
+++ b/homete/Resouces/Localizable.xcstrings
@@ -7,9 +7,6 @@
     "\"%@\"は既に登録されています。" : {
 
     },
-    "Detail View" : {
-
-    },
     "homete" : {
 
     },
@@ -194,6 +191,9 @@
 
     },
     "登録処理を終了しますか？" : {
+
+    },
+    "確認してもらう" : {
 
     },
     "終了する" : {
