update: 詳細画面のデザイン実装完了

--- a/homete/Resouces/Localizable.xcstrings
+++ b/homete/Resouces/Localizable.xcstrings
@@ -51,6 +51,9 @@
     "しばらくお待ちください" : {
 
     },
+    "ステータス" : {
+
+    },
     "タイムライン" : {
 
     },
@@ -70,6 +73,9 @@
 
     },
     "プライバシーポリシー" : {
+
+    },
+    "ポイント" : {
 
     },
     "まだアクティビティがありません" : {
@@ -131,6 +137,9 @@
 
     },
     "完了ポイント" : {
+
+    },
+    "実施予定日付" : {
 
     },
     "家事" : {
