update: 詳細画面のボタン表示の制御を実装

--- a/homete/Resouces/Localizable.xcstrings
+++ b/homete/Resouces/Localizable.xcstrings
@@ -166,6 +166,9 @@
     "家事を追加" : {
 
     },
+    "承認する" : {
+
+    },
     "承認待ち" : {
 
     },
@@ -176,6 +179,9 @@
 
     },
     "未完了" : {
+
+    },
+    "未完了に戻す" : {
 
     },
     "登録が完了しました！" : {
