update: 確認依頼時に家事実行者と依頼時間を記録するように修正

--- a/homete/Resouces/Localizable.xcstrings
+++ b/homete/Resouces/Localizable.xcstrings
@@ -7,6 +7,9 @@
     "\"%@\"は既に登録されています。" : {
 
     },
+    "「ありがとう」を伝える" : {
+
+    },
     "homete" : {
 
     },
@@ -87,6 +90,9 @@
     "もらった感謝の数" : {
 
     },
+    "やり直してもらう" : {
+
+    },
     "ようこそ!" : {
       "localizations" : {
         "ja" : {
@@ -164,9 +170,6 @@
 
     },
     "家事を追加" : {
-
-    },
-    "承認する" : {
 
     },
     "承認待ち" : {
