update: NavigationViewの型名誤りの修正

--- a/homete/Resouces/Localizable.xcstrings
+++ b/homete/Resouces/Localizable.xcstrings
@@ -10,7 +10,7 @@
     "「ありがとう」を伝える" : {
 
     },
-    "Hello, World!" : {
+    "〇〇さんから\n「%@」の完了報告が届きました！" : {
 
     },
     "homete" : {
@@ -148,6 +148,9 @@
     "完了ポイント" : {
 
     },
+    "完了報告" : {
+
+    },
     "実施予定日付" : {
 
     },
@@ -167,6 +170,9 @@
 
     },
     "家事の名前を入力" : {
+
+    },
+    "家事の確認" : {
 
     },
     "家事を設定する" : {
