update: デザインシステムのボタンスタイルの無効状態はEnvironmentで注入する

--- a/homete/Resouces/Localizable.xcstrings
+++ b/homete/Resouces/Localizable.xcstrings
@@ -7,10 +7,16 @@
     "\"%@\"は既に登録されています。" : {
 
     },
+    "「%@」の" : {
+
+    },
     "「ありがとう」を伝える" : {
 
     },
-    "〇〇さんから\n「%@」の完了報告が届きました！" : {
+    "%lldpt" : {
+
+    },
+    "〇〇さんから" : {
 
     },
     "homete" : {
@@ -90,6 +96,9 @@
     "まだパートナーが登録されていません" : {
 
     },
+    "メッセージ" : {
+
+    },
     "もらった感謝の数" : {
 
     },
@@ -145,10 +154,13 @@
     "完了" : {
 
     },
+    "完了にする" : {
+
+    },
     "完了ポイント" : {
 
     },
-    "完了報告" : {
+    "完了報告が届きました" : {
 
     },
     "実施予定日付" : {
@@ -179,6 +191,9 @@
 
     },
     "家事を追加" : {
+
+    },
+    "感謝を伝えましょう！" : {
 
     },
     "承認待ち" : {
