update: 詳細画面から家事確認画面を表示できるようにする

--- a/homete/Resouces/Localizable.xcstrings
+++ b/homete/Resouces/Localizable.xcstrings
@@ -10,9 +10,6 @@
     "「%@」の" : {
 
     },
-    "「ありがとう」を伝える" : {
-
-    },
     "%lldpt" : {
 
     },
@@ -100,9 +97,6 @@
 
     },
     "もらった感謝の数" : {
-
-    },
-    "やり直してもらう" : {
 
     },
     "ようこそ!" : {
@@ -236,6 +230,9 @@
 
     },
     "確認してもらう" : {
+
+    },
+    "確認する" : {
 
     },
     "終了する" : {
