update: spaceの定義の呼び出し方を修正

--- a/homete/Resouces/Localizable.xcstrings
+++ b/homete/Resouces/Localizable.xcstrings
@@ -16,12 +16,6 @@
     "〇〇さんから" : {
 
     },
-    "Hello, World!" : {
-
-    },
-    "homete" : {
-
-    },
     "Homete" : {
       "localizations" : {
         "ja" : {
@@ -36,6 +30,9 @@
 
     },
     "OK" : {
+
+    },
+    "アカウント登録" : {
 
     },
     "お手数ですが、再度デバイスを近づけて通信を行ってください" : {
@@ -90,6 +87,9 @@
     "ポイント" : {
 
     },
+    "まずはあなたのニックネームを教えてください" : {
+
+    },
     "まだアクティビティがありません" : {
 
     },
@@ -131,6 +131,9 @@
 
     },
     "今月の獲得ポイント" : {
+
+    },
+    "例：たろう" : {
 
     },
     "入力履歴" : {
