update: アカウント登録画面の実装

--- a/homete/Resouces/Localizable.xcstrings
+++ b/homete/Resouces/Localizable.xcstrings
@@ -13,6 +13,9 @@
     "%lldpt" : {
 
     },
+    "10文字以内で入力して下さい" : {
+
+    },
     "〇〇さんから" : {
 
     },
@@ -35,6 +38,9 @@
     "アカウント登録" : {
 
     },
+    "あと%lld文字" : {
+
+    },
     "お手数ですが、再度デバイスを近づけて通信を行ってください" : {
 
     },
@@ -42,6 +48,9 @@
 
     },
     "キャンセル" : {
+
+    },
+    "この名前はパートナーの画面でも表示されます。\n後からいつでも変更可能です。" : {
 
     },
     "これからは、あなたとパートナーの家事を分担し、協力していくことができます。" : {
@@ -81,6 +90,9 @@
     "パートナーを登録する" : {
 
     },
+    "はじめまして！" : {
+
+    },
     "プライバシーポリシー" : {
 
     },
@@ -100,6 +112,9 @@
 
     },
     "もらった感謝の数" : {
+
+    },
+    "ユーザー名" : {
 
     },
     "ようこそ!" : {
@@ -209,6 +224,9 @@
 
     },
     "未完了に戻す" : {
+
+    },
+    "登録" : {
 
     },
     "登録が完了しました！" : {
