update: 退会処理のボタンを設定画面に実装

--- a/homete/Resouces/Localizable.xcstrings
+++ b/homete/Resouces/Localizable.xcstrings
@@ -41,6 +41,9 @@
     "あと%lld文字" : {
 
     },
+    "あなたのデータは全て削除され、復元することはできませんがよろしいですか？" : {
+
+    },
     "お手数ですが、再度デバイスを近づけて通信を行ってください" : {
 
     },
@@ -279,6 +282,15 @@
 
     },
     "認証に失敗しました。再度サインインをお試しください。" : {
+
+    },
+    "退会" : {
+
+    },
+    "退会しますか？" : {
+
+    },
+    "退会する" : {
 
     },
     "通信に失敗しました" : {
