update: アラートの文言修正

--- a/homete/Resouces/Localizable.xcstrings
+++ b/homete/Resouces/Localizable.xcstrings
@@ -41,7 +41,7 @@
     "あと%lld文字" : {
 
     },
-    "あなたのデータは全て削除され、復元することはできませんがよろしいですか？" : {
+    "あなたのデータは全て削除され、復元することはできません。\nまた、現在参加しているグループが2名以下の場合は、グループごと削除されます。" : {
 
     },
     "お手数ですが、再度デバイスを近づけて通信を行ってください" : {
