現在の変更内容をコミット

--- a/homete/Resouces/Localizable.xcstrings
+++ b/homete/Resouces/Localizable.xcstrings
@@ -10,13 +10,13 @@
     "「%@」の" : {
 
     },
+    "%@さんから" : {
+
+    },
     "%lldpt" : {
 
     },
     "10文字以内で入力して下さい" : {
-
-    },
-    "〇〇さんから" : {
 
     },
     "Homete" : {
